@@ -36,7 +36,8 @@ Ver.9 (in development)
   root of application or just under lib directory.
 - The variable $suppressAuthTargetFillingOnCreate in params.php prevents to set the target field of authentication
   on carete operation.
-
+- [BUG FIX] The addCondition() api of INTERMediator class ignore conditions in some case (value: 0, or without value).
+  This was over checking the object describing a condition, and modified to easier.
 
 Ver.8 (July 22, 2021)
 - [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
